# stacks

./: README.md  reem-education-ros-fuerte-gazebo-1.8.6-standalone.rosinstall
aruco_ros/: .gitignore  CMakeLists.txt  manifest.xml
aruco_ros/cfg/: threshold.cfg
aruco_ros/docs/: ArucoThresholdConfig-usage.dox  ArucoThresholdConfig.dox  ArucoThresholdConfig.wikidoc
aruco_ros/launch/: double.launch  single.launch
aruco_ros/src/: aruco_ros_utils.cpp  simple_double.cpp  simple_single.cpp
aruco_ros/src/aruco/: arucofidmarkers.cpp  board.cpp  boarddetector.cpp  cvdrawingutils.cpp  marker.cpp  markerdetector.cpp
aruco_ros/src/aruco_ros/cfg/: ArucoThresholdConfig.py
face_detector_opencv/: CMakeLists.txt  mainpage.dox  manifest.xml
face_detector_opencv/launch/: face_detector.launch
face_detector_opencv/src/: face_detector.cpp
overlay/atlas_msgs/: CMakeLists.txt  gazebo_ros_api_plugin.cpp  gazebo_ros_bumper.cpp  gazebo_ros_gpu_laser.h  gazebo_ros_imu.cpp  gazebo_ros_imu.h  gazebo_ros_joint_trajectory.cpp  gazebo_ros_p3d.cpp  gazebo_ros_p3d.h  manifest.xml
overlay/control_msgs/control_msgs/: CMakeLists.txt  manifest.xml
overlay/control_msgs/control_msgs/src/control_msgs/msg/: _FollowJointTrajectoryAction.py  _FollowJointTrajectoryActionFeedback.py  _FollowJointTrajectoryActionGoal.py  _FollowJointTrajectoryActionResult.py  _FollowJointTrajectoryFeedback.py  _FollowJointTrajectoryGoal.py  _FollowJointTrajectoryResult.py  _GripperCommand.py  _GripperCommandAction.py  _GripperCommandActionFeedback.py  _GripperCommandActionGoal.py  _GripperCommandActionResult.py  _GripperCommandFeedback.py  _GripperCommandGoal.py  _GripperCommandResult.py  _JointControllerState.py  _JointTolerance.py  _JointTrajectoryAction.py  _JointTrajectoryActionFeedback.py  _JointTrajectoryActionGoal.py  _JointTrajectoryActionResult.py  _JointTrajectoryControllerState.py  _JointTrajectoryFeedback.py  _JointTrajectoryGoal.py  _JointTrajectoryResult.py  _PointHeadAction.py  _PointHeadActionFeedback.py  _PointHeadActionGoal.py  _PointHeadActionResult.py  _PointHeadFeedback.py  _PointHeadGoal.py  _PointHeadResult.py  _SingleJointPositionAction.py  _SingleJointPositionActionFeedback.py  _SingleJointPositionActionGoal.py  _SingleJointPositionActionResult.py  _SingleJointPositionFeedback.py  _SingleJointPositionGoal.py  _SingleJointPositionResult.py  __init__.py
overlay/control_msgs/control_msgs/src/control_msgs/srv/: _QueryCalibrationState.py  _QueryTrajectoryState.py
overlay/control_toolbox/: .gitignore  (+2 more)
overlay/osrf-common-1.0/ros/: CMakeLists.txt
overlay/osrf-common-1.0/ros/osrf_msgs/: .gitignore  CMakeLists.txt
overlay/osrf-common-1.0/ros/osrf_msgs/src/osrf_msgs/msg/: _JointCommands.py  __init__.py
pal_gazebo_plugins/: .gitignore  CMakeLists.txt  manifest.xml  stack.xml
pal_gazebo_plugins/cfg/: GazeboRosOpenniKinect.cfg
pal_gazebo_plugins/docs/: GazeboRosOpenniKinectConfig-usage.dox
pal_gazebo_plugins/launch/: run_gazebo.launch  spawn.launch
pal_gazebo_plugins/scripts/: run_gzfactory  run_gzserver
pal_gazebo_plugins/src/: gazebo_ros_diffdrive.cpp  gazebo_ros_diffdrive.h  gazebo_ros_forcetorque.cpp  gazebo_ros_openni_kinect.cpp  gazebo_ros_openni_kinect.h  gazebo_ros_range.cpp  gazebo_ros_range.h
pal_gazebo_plugins/src/pal_gazebo_plugins/cfg/: GazeboRosOpenniKinectConfig.py
pal_vision_segmentation/: .gitignore  CMakeLists.txt  manifest.xml
pal_vision_segmentation/cfg/: DisparitySegment.cfg  HistogramSegment.cfg  TemplateSegment.cfg
pal_vision_segmentation/docs/: DisparitySegmentConfig-usage.dox  DisparitySegmentConfig.dox  DisparitySegmentConfig.wikidoc  HistogramSegmentConfig-usage.dox  HistogramSegmentConfig.dox  HistogramSegmentConfig.wikidoc  TemplateSegmentConfig-usage.dox  TemplateSegmentConfig.dox  TemplateSegmentConfig.wikidoc
pal_vision_segmentation/launch/: disparity_and_stereo.launch  disparity_check.launch  disparity_constant.launch  disparity_segment.launch  histogram_ball_kinect.launch  histogram_juicebox_segment.launch  histogram_manzanilla_segment.launch  histogram_pringles_segment.launch  histogram_segment.launch  template_segment.launch
pal_vision_segmentation/pal_test/: histogram_segmentation_unit_test.cpp
pal_vision_segmentation/src/: disparity_segmentation.cpp  histogram_segmentation.cpp  template_segmentation.cpp
pal_vision_segmentation/src/pal_vision_segmentation/cfg/: DisparitySegmentConfig.py  HistogramSegmentConfig.py  TemplateSegmentConfig.py
person_detector_opencv/: CMakeLists.txt  mainpage.dox  manifest.xml
play_motion/: .gitignore
reem_arm_navigation/: manifest.xml  stack.xml
reem_common/: stack.xml
reem_controllers/: stack.xml
reem_controllers/joint_group_position_controller/: CMakeLists.txt  joint_group_position_controller_plugins.xml  mainpage.dox  manifest.xml
reem_controllers/joint_group_position_controller/include/joint_group_position_controller/: joint_group_position_controller.h
reem_controllers/joint_group_position_controller/src/: joint_group_position_controller.cpp
reem_gazebo_navigation/: reem_gazebo_navigation.diff  stack.xml
reem_kinematics/: stack.xml
reem_tutorials/: CMakeLists.txt  manifest.xml  mapping.launch.diff  stack.xml
reem_upperbody_visual_servo/: CMakeLists.txt  README.txt  mainpage.dox  manifest.xml
reem_upperbody_visual_servo/config/: reem.vcg  reem_poses.yaml
reem_upperbody_visual_servo/etc/: desired_state.bak.yml  desired_state.yml
reem_upperbody_visual_servo/launch/: reem_upperbody_visual_servo.launch  rviz.launch  simulation.launch
reem_upperbody_visual_servo/scripts/simulation/: initial_pose.sh  run_servo.sh  rviz.sh  start_perception.sh  start_simulation.sh  stop_perception.sh
reem_upperbody_visual_servo/src/: conversions.cpp  conversions.h  hand_task.cpp  hand_task.h  head_task.cpp  head_task.h  kinematic_chain.cpp  kinematic_chain.h  learn_desired_state.cpp  move_parts.cpp  move_parts.h  old_reem_upperbody_visual_servo.cpp  reem_upperbody_visual_servo.cpp  secondary_task.cpp  secondary_task.h  tf_utils.cpp  tf_utils.h  utility_functions.cpp  utility_functions.h
(+267 files in other folders)
